[tool.poetry]
name = "plotly-proj"
version = "0.1.0"
description = ""
authors = ["Arun Chithambaram <arun.chithambaram@bridgeinternationalacademies.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.14.3"
pandas = "^1.2.2"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.3"
nbformat = "^5.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
